--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,99 @@
-#title {
-background-color: #ff4c68;
+/* Title */
+
+body {
+    font-family: "montserrat";
 }
+
+#title {
+    background-color: #ff4c68;
+    color: #fff;
+}
+
+
+
 .container-fluid {
     padding: 3% 15%;
 }
-h1{
-    font-family:"montserrat";
+
+h1 {
+    font-family: "montserrat";
     font-weight: 900;
     font-size: 3rem;
     line-height: 1.5;
 }
+
+/* navigation bar */
+
+.navbar {
+    padding-bottom: 4.5rem;
+}
+.brand {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.navbar-brand {
+    color: #fff;
+    font-family: "ubuntu";
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.nav-item {
+    padding: 0 18px;
+
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-weight: 300;
+    color: #fff;
+}
+
+
+/* Download button */
+
+.download-bt {
+    margin: 3% 5% 3% 0;
+}
+/* Title image */
+
+.title-img {
+    width: 60%;
+    transform: rotate(25deg);
+}
+
+/* Features */
+
+#features {
+    padding-top: 4.5rem;
+    font-family: "montserrat";
+   
+}
+h3 {
+    font-family: "montserrat";
+    font-weight: bold;
+    font-size: 1.5rem;
+    padding-top: 1rem;
+}
+p {
+    color: #8f8f8f;
+}
+
+svg {
+    fill: #ef8172;
+    width: 50px;
+    height: 50px;
+    /* padding-bottom: 1rem; */
+  }
+  svg:hover {
+    fill: #ff4c68;
+  }
+  /* Alternative icon*/
+  .icon {
+    color: #ef8172;
+    /* padding-bottom: 1rem; */
+  }
+  .icon:hover{
+    color: #ff4c68;
+  }
