--- a/css/styles.css
+++ b/css/styles.css
@@ -97,3 +97,34 @@ svg {
   .icon:hover{
     color: #ff4c68;
   }
+
+  /* Testimonials */
+
+  #testimonials {
+    padding: 7% 15%;
+    text-align: center;
+    color: #fff;
+    background-color: #ef8172;
+  }
+  h2 {
+    font-family: "montserrat";
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 1.5;
+  }
+  .testimonials-image {
+
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+  }
+
+  #press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+  }
+  .press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
+  }
