--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ svg {
   /* Testimonials */
 
   #testimonials {
-    padding: 7% 15%;
+    
     text-align: center;
     color: #fff;
     background-color: #ef8172;
@@ -117,6 +117,9 @@ svg {
     width: 10%;
     border-radius: 100%;
     margin: 20px;
+  }
+  .carousel-item {
+    padding: 7% 15%;
   }
 
   #press {
