--- a/css/styles.css
+++ b/css/styles.css
@@ -131,3 +131,12 @@ svg {
     width: 15%;
     margin: 20px 20px 50px;
   }
+
+  /* Pricing */
+
+  #pricing {
+    padding: 100px;
+  }
+  .pricing-column {
+    padding: 3% 2%;
+  }
