--- a/css/styles.css
+++ b/css/styles.css
@@ -1,164 +1,194 @@
-/* Title */
-
 body {
-    font-family: "montserrat";
+  font-family: "montserrat";
+  text-align: center;
 }
 
-#title {
-    background-color: #ff4c68;
-    color: #fff;
-    
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "montserrat";
+  font-weight: bold;
 }
 
+p {
+  color: #8f8f8f;
+}
 
+/* Headings */
+
+.big-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
 
 .container-fluid {
-    padding: 3% 15%;
-}
-
-h1 {
-    font-family: "montserrat";
-    font-weight: 900;
-    font-size: 3rem;
-    line-height: 1.5;
+  padding: 7% 15%;
 }
 
 /* navigation bar */
 
 .navbar {
-    padding-bottom: 4.5rem;
+  padding-bottom: 4.5rem;
 }
+
 .brand {
-    padding-left: 0;
-    padding-right: 0;
+ padding: 0 0 15% 0;
 }
 
 .navbar-brand {
-    color: #fff;
-    font-family: "ubuntu";
-    font-size: 2.5rem;
-    font-weight: bold;
+  color: #fff;
+  font-family: "ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .nav-item {
-    padding: 0 18px;
+  padding: 0 18px;
 
 }
 
 .nav-link {
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: #fff;
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: #fff;
 }
 
 
 /* Download button */
 
 .download-bt {
-    margin: 3% 5% 3% 0;
+  margin: 3% 5% 3% 0;
 }
+
+/* Title */
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+
+}
+#title .title {
+  padding: 3% 15% 7%;
+}
+
 /* Title image */
 
 .dog-image {
-position: relative;
+  position: relative;
 }
 
 .title-image {
-    width: 60%;
-    transform: rotate(25deg);
-    position:absolute;
-    right: 25%;
+  width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 25%;
 }
 
 /* Features */
 
 #features {
-    padding: 4.5rem 0;
-    font-family: "montserrat";
-    background-color: #fff;
-    position: relative;
-    
+  font-family: "montserrat";
+  background-color: #fff;
+  position: relative;
+}
 
-   
-}
-h3 {
-    font-family: "montserrat";
-    font-weight: bold;
-    font-size: 1.5rem;
-    padding-top: 1rem;
-}
-p {
-    color: #8f8f8f;
+.features-title {
+  font-size: 1.5rem;
 }
 
 svg {
-    fill: #ef8172;
-    width: 50px;
-    height: 50px;
-    /* padding-bottom: 1rem; */
-  }
-  svg:hover {
-    fill: #ff4c68;
-  }
-  /* Alternative icon*/
-  .icon {
-    color: #ef8172;
-    /* padding-bottom: 1rem; */
-  }
-  .icon:hover{
-    color: #ff4c68;
-  }
+  fill: #ef8172;
+  width: 50px;
+  height: 50px;
+}
 
-  /* Testimonials */
+svg:hover {
+  fill: #ff4c68;
+}
 
-  #testimonials {
-    
+/* Alternative icon*/
+.icon {
+  color: #ef8172;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
+
+/* Testimonials */
+
+#testimonials {
+
+  color: #fff;
+  background-color: #ef8172;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.testimonials-image {
+
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+
+/* Press */
+
+#press {
+  background-color: #ef8172;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* Pricing */
+
+.pricing-column {
+  padding: 3% 2%;
+}
+
+/* Call-to-action */
+
+#cta {
+  font-family: "montserrat";
+  color: #fff;
+  background-color: #ff4c68;
+
+}
+
+/* Footer */
+#footer {
+  background-color: #fff;
+}
+
+.footer-icon {
+  padding-bottom: 1.5rem;
+}
+
+@media (max-width: 1028px) {
+
+  #title {
     text-align: center;
-    color: #fff;
-    background-color: #ef8172;
-  }
-  h2 {
-    font-family: "montserrat";
-    font-weight: bold;
-    font-size: 3rem;
-    line-height: 1.5;
-  }
-  .testimonials-image {
-
-    width: 10%;
-    border-radius: 100%;
-    margin: 20px;
-  }
-  .carousel-item {
-    padding: 7% 15%;
   }
 
-  #press {
-    background-color: #ef8172;
-    text-align: center;
-    padding-bottom: 3%;
+  .title-image {
+    position: static;
+    transform: rotate(0);
   }
-  .press-logo {
-    width: 15%;
-    margin: 20px 20px 50px;
-  }
-
-  /* Pricing */
-
-  #pricing {
-    padding: 100px;
-  }
-  .pricing-column {
-    padding: 3% 2%;
-  }
-
-  @media (max-width: 1028px) {
-
-    #title {
-      text-align: center;
-    }
-    .title-image {
-      position: static;
-      transform: rotate(0);
-    }
-  }
+}
